--- a/Introduction/index.html
+++ b/Introduction/index.html
@@ -6,6 +6,6 @@
     <title>TypeScript</title>
   </head>
   <body>
-    <script src="./output/script.js"></script>
+    <script type="module" src="./output/script.js"></script>
   </body>
 </html>
